--- a/unicorn-oauth2/messages-client/src/main/resources/templates/index.html
+++ b/unicorn-oauth2/messages-client/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <a href="/authorize?grant_type=authorization_code" th:href="@{/authorize?grant_type=authorization_code}"><span style="font-size:medium">Authorization Code</span>&nbsp;&nbsp;<small class="text-muted">(Login to Spring Authorization Server using: user1/password)</small></a>
+                        <a href="/authorize?grant_type=authorization_code" th:href="@{/authorize?grant_type=authorization_code}"><span style="font-size:medium">Authorization Code</span>&nbsp;&nbsp;<small class="text-muted">(Login to Spring Authorization Server using: nam/password 这里apply了两次，不要误解，本质⬆一次够了)</small></a>
                     </li>
                     <li class="list-group-item">
                         <a href="/authorize?grant_type=client_credentials" th:href="@{/authorize?grant_type=client_credentials}"><span style="font-size:medium">Client Credentials</span></a>
