--- a/unicorn-oauth2/samples-gateway-client/src/main/resources/templates/index.html
+++ b/unicorn-oauth2/samples-gateway-client/src/main/resources/templates/index.html
@@ -108,7 +108,8 @@
                 </table>
             </div>
         </div>
+        <script src="/webjars/bootstrap/js/bootstrap.bundle.min.js" th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
         <script src="/webjars/jquery/jquery.min.js" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-        <script src="/webjars/bootstrap/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+        <script src="/webjars/popper.js/umd/popper.js" th:src="@{/webjars/popper.js/umd/popper.js}"></script>
     </body>
 </html>
